OAR CHANGELOG
=============

version 2.2.12:
---------------
  - Bug #5239: fix the bug if there are spaces into job name or project
  - Fix the bug in Iolib if DEAD_SWITCH_TIME >0
  - Fix a bug in bipbip when calling the cpuset_manager to clean jobs in error
  - Bug #5469: fix the bug with reservations and Dead resources
  - Bug #5535: reservations were checked badly at the same time.
  - Add 2 new tables to keep scheduling decisions log
    (gantt_jobs_predictions_log and gantt_jobs_resources_log). This will help
    to debug scheduling troubles
  - Now reservations are scheduled only once (at submission time). So resources
    for a reservation cannot change in the time.

version 2.2.11:
---------------

  - Fix Debian package dependency on a CGI web server.
  - Fix little bug: remove notification (scheduled start time) for Interactive
    reservation.
  - Fix bug in reservation: take care of the SCHEDULER_JOB_SECURITY_TIME for
    reservations to check.
  - Fix bug: add a lock around the section which creates and feed the OAR
    cpuset.
  - Taktuk command line API has changed (we need taktuk >= 3.6).
  - Fix extra ' in the name of output files when using a job name.
  - Bug #4740: open the file in oarsub with user privileges (-S option)
  - Bug #4787: check if the remote socket is defined (problem of timing with
    nmap)
  - Feature Request #4874: check system names when renaming properties
  - DrawGantt can export charts to be reused to build a global multi-OAR view
    (e.g. DrawGridGantt).
  - Bug #4990: DrawGantt now uses the database localtime as its time reference. 

version 2.2.10:
---------------

  - Job dependencies: if the required jobs do not have an exit code == 0 and in
    the state Terminated then the schedulers refuse to schedule this job.
  - Add the possibility to disable the halt command on nodes with
    cm_availability value.
  - Enhance oarsub "-S" option (more #OAR parsed).