@@ -1,0 +1,12 @@
+#!/bin/bash
+# $id$
+
+OARUSER=oar
+eval CHECKLOGDIR=~$OARUSER/checklogs
+
+shopt -s nullglob
+
+for f in $CHECKLOGDIR/*; do
+	exit 1
+done
+exit 0
