@@ -8,6 +8,9 @@ version 2.2.12:
   - Fix a bug in bipbip when calling the cpuset_manager to clean jobs in error
   - Bug #5469: fix the bug with reservations and Dead resources
   - Bug #5535: reservations were checked badly at the same time.
+  - New feature: local checks on nodes can be plugged in the oarnodecheck
+    mechanism. Results are asynchronously checked from the server (taktuk
+    ping checker)
   - Add 2 new tables to keep scheduling decisions log
     (gantt_jobs_predictions_log and gantt_jobs_resources_log). This will help
     to debug scheduling troubles
